# pmw-analysis

./: .gitignore  .pylintrc  LICENSE  README.md  environment.yml  example_bucket_read.py  example_feature_extraction.py  example_oscillations_detection.py  example_umap.py  pyproject.toml  script.sh
configs/: quantization.yml
examples/: bucket_read.py  example_bucket_read.py  example_feature_extraction.py  example_oscillations_detection.py  example_umap.py  feature_retrieval.py  final_processing.py  oscillations_detection.py  quantized_features_analysis.py  quantized_features_umap.py  script.py  script.sh  segmented_features_analysis.py  segmented_features_kmeans.py  segmented_features_pca.py  signatures_evolution.py
examples/tmp/: feature_set.py  partial_dataset.py  sanity_check.py
pmw_analysis/: constants.py  cycle_detection.py  preprocessing.py
pmw_analysis/preprocessing/: feature_extraction.py
pmw_analysis/retrievals/: retrieval_1b_c_pmw.py
pmw_analysis/utils/: pmw.py  pyplot.py
src/pmw_analysis/: analysis.py  constants.py  cycle_detection.py  draft.py  preprocessing_polars.py
src/pmw_analysis/analysis/: clustering.py  cycle_detection.py  eda.py  spatial_visualization.py
src/pmw_analysis/copypaste/: wpca.py
src/pmw_analysis/dr/: clusterization.py  kmeans.py  pca.py  umap.py
src/pmw_analysis/processing/: filter.py  model.py
src/pmw_analysis/quality/: metric.py  plot_map.py
src/pmw_analysis/quantization/: dataframe_pandas.py  dataframe_polars.py  polars.py  script.py
src/pmw_analysis/utils/: io.py  (+5 more)
tests/: test_preprocessing_polars.py
(+3 files in other folders)
