[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmw_analysis"
version = "0.0.1"
authors = [
    { name = "Aleksandrina Streltsova", email = "aleksandrina.streltsova@epfl.ch" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "gpm_api",
    "polars",
]

[project.urls]
Homepage = "https://github.com/aleksandrina.streltsova/pmw-analysis"
Issues = "https://github.com/aleksandrina.streltsova/pmw-analysis/issues"